--- a/apps/vagrant/logging-elasticsearch/deploy/secret/elasticsearch/security/action_groups.yml
+++ b/apps/vagrant/logging-elasticsearch/deploy/secret/elasticsearch/security/action_groups.yml
@@ -1,6 +1,6 @@
 _meta:
     type: actiongroups
-    config_version: ENC[AES256_GCM,data:5w==,iv:6q4QfeVo8aGZEz9snnaI9ZqkVPBVoyJgOxG5ta/GrP8=,tag:374YcC5pOYmiKF5bAMl2KQ==,type:int]
+    config_version: ENC[AES256_GCM,data:8Q==,iv:OrhA2l8dv91KV3vJCWV+khv9HgfJtlnIfjehL+B3ERU=,tag:uKBmaNMcWJmSOr0Xqitd4g==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2WDRHZ1VlOGFUVjN1ZGF5
-            TE9rUVE5NEtVa1R0eXYvM1d4dWc2QUZ2bFNJCmFFT3cvQTBTaHd3ZFhMMkdqeUVl
-            MTVyRUorL3FxWXBqV2E3K2JNL1BRMmMKLS0tIGhld3lNVm9DdHV2cTNVYUtjNXQy
-            cGlxWkw1Y0llWU1sWUJ4UUNUWVI2TFEKQh7PeBfB9JAgqK2e0D4fXkjIw726D5jc
-            oZoSY9EEK1AIkl1nwQpN1GmovWbbmJ0IryJHonEgC1WsxQibGxdjDg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZckJYemVzYUx2Wjk5Q1Jj
+            UEtsYXZjT1RLMkFadnM3ajQySy9OOHp0K2dzCksrN2YxN2dKMENjcGlJSlpHc2ky
+            TWEvZXhDcGdjSlpaN09YRXRza2UyK00KLS0tIGRYNmNETHgzVzZSeWgwaTFBNFc1
+            UXRxY0NyNHhqeTg2NHBLb3dYM0ZWYlkKr17/jnAh1+uEdQlhCnSXuLbwTfMH3Eut
+            D63Qt8wD1YjiBZIovzTcWam6ocYpmlNhbEg+IEkFIhWsdd1+xrCAEA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-08T08:04:57Z"
-    mac: ENC[AES256_GCM,data:TiJptxaMphojtiShIf0JATQJDXO6+MkCdtilgB1lgbjmA82Bna+uaZxFjiEkUagWvzCxTkWGX0H9gs5D+tWQw+2nLsBbTKBXMr9000hGC8RCkmDdNAqqaLn+PoNsxQk75l6g9HOZDlNuIHaPVcKPTZnUsCxbPLAVa9nc5QzvSvA=,iv:BkgmGF6Zd4sl1qWKQFtftpfrSVVsI4pPWJx+ggui/mY=,tag:dzuWOVcyttgipGwU3oKj6w==,type:str]
+    lastmodified: "2023-07-08T12:20:39Z"
+    mac: ENC[AES256_GCM,data:D/3VNzkPcG1F8+SGSeR69mz63YxbuJGivtQHvKbw945nlNi6t+W1UEAOPP78CR5jsAbsAU2P/eaaWwZYbT+L3Py0sao3PcXk1zJq8SPy/RnYhH2TIiczkgNp15iTotwvtz5gj36vbNOX9mdgFHZ2A6VlgoaCJDGv5IJbxF0ifaE=,iv:uCOuj/GAVYIW6kZWwUOC8qHtjZi2U07p749LIm56iWo=,tag:u7JtBIjQQE1Z7Fz7xkNaCg==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.7.3
