--- a/apps/vagrant/logging-elasticsearch/deploy/secret/elasticsearch/security/nodes_dn.yml
+++ b/apps/vagrant/logging-elasticsearch/deploy/secret/elasticsearch/security/nodes_dn.yml
@@ -1,10 +1,10 @@
 _meta:
     type: nodesdn
-    config_version: ENC[AES256_GCM,data:2A==,iv:fL0l4KfQ7wzXmVbpDmaUwBc6LSMOyjTJyT5ueyy2Xms=,tag:dg4li/Bhks1F60/ZX3qjCA==,type:int]
-#ENC[AES256_GCM,data:jIXnAzyzEx1Mhd1PI8JTC4fO+0fi/pa+siIViZb+I0P6igKcMgaONvzwtbgzp7EanlsEkN8=,iv:aTEskuvO9b01+yHQ3D/unQjwApq9OZIj6nUQAH0OUMo=,tag:6KVOEBiP2j9Z3Z9zZJvszA==,type:comment]
-#ENC[AES256_GCM,data:zcP2dmGNMCpJ5A==,iv:KdLLtb/tUJo1cRW9ki3pDtJq4X5xvHgETAniWgerX44=,tag:Pv2NFvM+TipR8CzVuaZpbQ==,type:comment]
-#ENC[AES256_GCM,data:36ycjDa1NJzuDxwd,iv:yBgaLm8StwaYZvYcAjJXA5KrWTUI96oWGPK3iGERjHk=,tag:kpwbUYgHco/s0rmmqKYOKA==,type:comment]
-#ENC[AES256_GCM,data:qPhxZ6sBCjrgchjDgj5u82nPtiKDLP8HNw==,iv:KQAdhM9EHFjlbDBbpySKCEQhRgVhi4BJw9QMJWU7mhg=,tag:hQXRZkT8tEystywES4NuUA==,type:comment]
+    config_version: ENC[AES256_GCM,data:nA==,iv:Y+Wanoo7nz0tsu/3zE1whrjLs7WXqt/DyuN1tgadveg=,tag:dG72m+x0sBSt8OPgwh/F7Q==,type:int]
+#ENC[AES256_GCM,data:90eqj4dRR3CGk8/8yIhjslJyS8YilYzMGrEvMcIGvUiIqMvq1JjeXUaoy/gEgfPnf8ChH14=,iv:cCDzgq3kG+Xpy/UnDPeHDdMys8VN+bWsHKfqyWe79lM=,tag:+bm4mPMeP01N+0kQypPaCQ==,type:comment]
+#ENC[AES256_GCM,data:qfccMOHLYuZBJg==,iv:NjgjnWVruY5zIpaAyZb/xNCv8PKIKMrR5UkQaJelHwo=,tag:DS154QSmKVI8e9jygAAnOw==,type:comment]
+#ENC[AES256_GCM,data:vNggqKeU5nWXfRGy,iv:/X8t9IPTWEZkrg3+YEpUczCqbH5EAMzhGYOn7wfmKcw=,tag:tHHo8/n8Wjo7/KRHi5m4mQ==,type:comment]
+#ENC[AES256_GCM,data:KZILxiqQURM8nQPBcp5IzmGBxZdiU3/1QA==,iv:7VSs70h5eXSdSDX68muj0iomWDYjjOBl96MYwsxlqtw=,tag:6yIJPpi7z7d+gh0SkjFvbg==,type:comment]
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +14,14 @@ sops:
         - recipient: age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsTlhIOVY2eWg0WHczby9Y
-            UGhzV0VydkZmb3dIckc4Ty9pTmhZbUVjeUNVCkNueTcrNnZEdFRIekVScW91TTBM
-            eXplNnQxaHpLbmludzN2N3N1azIxMDgKLS0tIG9EQmRHQ1IrWmk5bkQwbjZjZ1NH
-            RjNFTmxJNHdKbUdZa096MGlwUXg3Z0EKdpVxa7L+RllidbI+WlVtU/H9V49B5V8J
-            577SYP6qUvyqRKorh3OU9rLglJtNXm6xXzK6ierr5Saf8iEvDm3Nbw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2ZTVHOWllMjVsbE01ZDZ6
+            UUZiQmZIT0FuOVZ5aTZFN3NMMjNBdmtzckRrCjFpVkp0N3FnbGJMMGJnU2xPZWdC
+            VU44L094R2l6M1VCZHkvOWFJZjQwUTAKLS0tIEI0dlV6Ujk0RG5zNkdGamt0UDIw
+            cEtGYmxFcUg0NXhxLzVqN1BSVGJzaDQKj3TVhzP+mWkRBMgXjJQSzon7Oa1Ctp0Y
+            0KZG73DZqJUcEfiF/ttWDSF4TYquq0uv7+ajWecTBcCEzEd6hLlPcQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-08T08:04:58Z"
-    mac: ENC[AES256_GCM,data:Y9mYJiLnhrbW4uV9oTOOI7xwuKf0P2aZJZ5GGEaVB+yd4dzUlLeXL8qRcGR1p5nqROHBpmVt9iqdlUGv0V0LMlJK/uW8gvmdJBM7kgLEqcOs+pri0+6nPUSu/kfs4OR1I40ul0qVF5X6TUYAM0skUR8huGbhX9UgLDRXAPoO73U=,iv:q/nrYPBE5yTZ+zML23M+lD0m52TCLnWT9v19yOe2w+s=,tag:JZ1JFTBCYTp6KpoQgDQwyQ==,type:str]
+    lastmodified: "2023-07-08T12:20:39Z"
+    mac: ENC[AES256_GCM,data:nz4OHJ4fka+CiFGoqa/ppHDWhAmORUVtzT6KQ6F4cNMrODVFhu2jwuEPtPM0a1CXhxyz5XMwMnUq5zVfKsrC0Il8T5Y3OpjDOZ5X8XFiQrUdhy2ZA0YU0Ub4T1EliU1L/cMTXpzR6zRTYsorlWZd0kWfnxv4TVxE5LUwY1Twrec=,iv:i1Ghqg6I9yC1qeODP/Gs9Uvaqy5z96zcWPvOs5OvYZs=,tag:ihik04N3ny0xpfnAWsDplQ==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.7.3
