--- a/apps/vagrant/logging-elasticsearch/deploy/secret/elasticsearch/security/roles.yml
+++ b/apps/vagrant/logging-elasticsearch/deploy/secret/elasticsearch/security/roles.yml
@@ -1,28 +1,28 @@
 _meta:
     type: roles
-    config_version: ENC[AES256_GCM,data:Ig==,iv:uK+bg5zmPbGSGeFTXHElQ7FGci9vy7EKX7VxftdMshw=,tag:5c3uAN00PvP48UNI8LFtoA==,type:int]
+    config_version: ENC[AES256_GCM,data:ew==,iv:koUSu+tTwbCWUMkI+WtkWinVsWv5+auBSwx2hte/GKU=,tag:caiE+sYDkj68vevDWemxZg==,type:int]
 crowdsec:
-    reserved: ENC[AES256_GCM,data:9/O6/A==,iv:IZxTwwAd0wy2TJQcJ5T9c17ZHed9jeHmvZ3CeXPHtTc=,tag:wfitRJwJqkqoemH2sftwxA==,type:bool]
-    hidden: ENC[AES256_GCM,data:VXtgZIE=,iv:2HXqn6nGYpgJkhAcjoFNXEFza7vGpyP2YIrBJGlSl+k=,tag:qRwWJBVICOHsYx+e+/WH6g==,type:bool]
+    reserved: ENC[AES256_GCM,data:QnNAcw==,iv:iLZdqp37lPYZT7ZsOwRRF+m9pH0FFTvexYt6zwauIsI=,tag:zrpD4Ip7U3iwxd/Sdz1gJw==,type:bool]
+    hidden: ENC[AES256_GCM,data:8wp+bm0=,iv:NQqZFiQ96CSzvVk/9kvZUEne9BlCK7+daCk5afNrZ8w=,tag:RGHY9ezw7WQeUtIrmgOYKg==,type:bool]
     cluster_permissions: []
     index_permissions:
         - index_patterns:
-            - ENC[AES256_GCM,data:7RwuQ2PdRvus,iv:/ga3ui+t8OwFezd0qqAeADpTATz+v5ZB2UaBvpfQHKw=,tag://Xs8ga+I7WY6gmBVODQwA==,type:str]
+            - ENC[AES256_GCM,data:N7s4vnAMrPAq,iv:tc8uuNbKqOf+h7RLaZIsbCdVyjr4g6cb3v6XFhMkxMg=,tag:XRPHh4B7/jDYx1N9K7kpIA==,type:str]
           allowed_actions:
-            - ENC[AES256_GCM,data:PjlXnA==,iv:T5CPcGYxo1d706t6Gc2OHtb/z4gLXsP1u5W5LwaoLkg=,tag:pv0vs54hBHVP/XVJ2PN1tg==,type:str]
-            - ENC[AES256_GCM,data:hLIH7vvG2+ymB6WGoU15fwK4Sfo=,iv:OEa8Gez8ByUApx8ET+xm2JxBZMZThuAVFmPbrpM15Hk=,tag:W00jIOYVLpWDp2baTO+OnQ==,type:str]
-    static: ENC[AES256_GCM,data:CCOdYRc=,iv:zAjCyLIplEZlmrHRWiPBkOxFtD8cq+jhY3GgVhYtQdw=,tag:zNbKe60tz6QdgQc81mQVjQ==,type:bool]
+            - ENC[AES256_GCM,data:8YQhig==,iv:+SROFg97xoFxVIdYdZ7hCTLDH9qZUZjoLhQ21A/DMFQ=,tag:jSym3++krGtABOJAsV/RAg==,type:str]
+            - ENC[AES256_GCM,data:s1IXFuD7ZoMzzXOTPiEWoMuNBhA=,iv:MFOilYTqxt7hC2gmoU2yZP2/cTDa1BZkFeEBD8Siodc=,tag:saHIBxNXb3/SxkLAlQK0Dg==,type:str]
+    static: ENC[AES256_GCM,data:nli8eaU=,iv:qtHjM5Cs3Y3FFkc0OpUjeqN60nptaN0WV/eWDQcDOps=,tag:AVpMYnbtvYr34LnMUIhQQg==,type:bool]
 grafana:
-    reserved: ENC[AES256_GCM,data:je9yrQ==,iv:HSoxmCMRXslgZ+lbJ0Qn6T8j+zAZui1uzNtizi+W6ZU=,tag:uLQmW1001i1sB5Ft94YZ0A==,type:bool]
-    hidden: ENC[AES256_GCM,data:Us4NZOw=,iv:DcQaLfbW7yRFs9L4P6qv6hu6ZI1mmZQeR8uViYlkBqw=,tag:zNxy3ey3HNiyCc4xnO6G7w==,type:bool]
+    reserved: ENC[AES256_GCM,data:2OKGRg==,iv:+vq9gFT75Rrv48S4zi5aDWRPny/wRy5ygy1GH4JCSBA=,tag:aKAiHSeKF4BVCfYdh3IINw==,type:bool]
+    hidden: ENC[AES256_GCM,data:BXfb3oc=,iv:kjRqAXqbP4OTGf4oS+G4SKZDDtZPmlHAuvjn1vAamXY=,tag:/V4aSBzj5nrbJ9oX71JyAQ==,type:bool]
     cluster_permissions: []
     index_permissions:
         - index_patterns:
-            - ENC[AES256_GCM,data:paeDo3QFlv5l,iv:Vk+wzF/DU8PUTv6TpicX6qiQYBQbH38km18+eFm27qo=,tag:WczHrx8Ty55YDTuTD9wEjg==,type:str]
+            - ENC[AES256_GCM,data:oNYUKwFwPmnj,iv:mS3IiI4thQZ0GGQddDRE8azD+5dvBu6YE94OVd99x18=,tag:al78AQSB3vsMQ3qXG3L2zw==,type:str]
           allowed_actions:
-            - ENC[AES256_GCM,data:ht7O7w==,iv:cECBAOD0XMYggxPS6testeQMyLFSy43FS1xaDaOsiD4=,tag:DQ62TcgKGhDU7iT/WrRO/A==,type:str]
-            - ENC[AES256_GCM,data:BG9GirAMNkxJSSq5cBmFHlhgtfXFU8cymYM=,iv:Zvw2VY6NgAh420BfiDXfLmAWJoCIrKM05D3rDGyVQcA=,tag:YupTmNX6RLAZPKwFlRdcdw==,type:str]
-    static: ENC[AES256_GCM,data:IJpiyQY=,iv:9fsfcvVL/mTg5SXebsuHwXMjwAlWO97s74LHjUUXNCc=,tag:WScyo0jcptPSqIDuLjbxLQ==,type:bool]
+            - ENC[AES256_GCM,data:ph6vtA==,iv:6+Eg6ftE6pGzsyuJHNfVjZrPsZroqRPMRdpMSb5D1XY=,tag:NZHV91Ff+5oX3wtQx5G6Qg==,type:str]
+            - ENC[AES256_GCM,data:yfUQsvGzafzDRwc7dcsOAx07cXAms87i1Ok=,iv:1waqOF0Ku9GAmG0k/Q8A1yupxrRWT1Pq/0/vH89RafY=,tag:QYIxbjheGzF5QFIuKvLckQ==,type:str]
+    static: ENC[AES256_GCM,data:ALrE5WI=,iv:PTV2kgtJOG2fsItHU7uBuhaRZyW4Gyp/jqRo0DISM+g=,tag:T6/QQXoWoNXNrYb/I1YKug==,type:bool]
 sops:
     kms: []
     gcp_kms: []
@@ -32,14 +32,14 @@ sops:
         - recipient: age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDU3RHNnhlcTNaeVBNNzAw
-            ZEc1MDNYMzZjdEt6d2J2Um5tRzFqanZPbGswClk2SEFXVUphaGkzMVdybldkeTJV
-            emwxd0FWclcveGh4T2RkQUhPQVpHYzQKLS0tIGY4dkxKaHd6Q0dzaWNYYmlOWTZ2
-            VTZTMVdiZFBEby90emQ0UXhabklWRXcKz0gRGKVbffk0LyYAZoO4faxytE1WqZpl
-            8O+4ZWI+HTpQQTvu9o1jcKpRoXUsIQ1ih3L5ktE7JgDZT9TzDDoD7w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxSWRpQlgxOUdmMHU1NmhJ
+            S0k5YXZkSkZocDVGakpkUmJZajlneTRDeXprCitYV0x0V294R0l4bFFpOTdVYmtz
+            b2h6RkFaM3Y4d1kxckRCNUlCU0FVUmMKLS0tIG1mZHcyRmk1ZUo5SkNXV0NaeEN1
+            ekdaR2N3bDNENTl1L1YxYmVYQUVBWWMKr13iHfYWEXvsx1Y1rg+aaWatO5c7/VmE
+            e8vb/k4gTkVqSP3+ePkG7OwZiwZkYVijl2HjlSfh1b8evBLEr9yicg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-08T08:04:58Z"
-    mac: ENC[AES256_GCM,data:eYuJmTgbfb9jxrWnNkkiuZPILRct96tsB/oZmFJIb4dsU1L6MtdTBwYKcrQeXdXsLSUmRON8Ac3LntlhC0Z+zVAQj7VNZ160XI56ahOKIBmzBoHyT4v5b1cEczKPIdSEUKni8xwfglhdguPIPAMqlxcvViIDqBiZ9fblLi28EXE=,iv:armDUHeqgTB1SeL/qLVpObWtXVLDS4Q0StioIuBr92E=,tag:88SsbC6IfkDc2RIFbBY5Vg==,type:str]
+    lastmodified: "2023-07-08T12:20:39Z"
+    mac: ENC[AES256_GCM,data:KRfcYmVhLPogBBzqU0oy3cr0ouQqQxWsTIfot1N1UQTyMsS+FaJWpZ8uDrRAwRsKW0bQv2zM9di1qj4DpazYozcXqNNU+VjM180theLUd0TfXU1Bf7p+nzl5NCjT5fdbxrKvfy/INSeWhep6kvMSDicztnP09dUqv4BqacbJA+0=,iv:wxBLVPkczzNbYOqalvMrq2bkwS+S023Q5LZCPR4KF4c=,tag:8CA+a7wJlx60Af9G9onjxQ==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.7.3
