--- a/apps/vagrant/logging-elasticsearch/deploy/secret/elasticsearch/security/roles_mapping.yml
+++ b/apps/vagrant/logging-elasticsearch/deploy/secret/elasticsearch/security/roles_mapping.yml
@@ -1,54 +1,54 @@
-#ENC[AES256_GCM,data:48hjShf1TltffLaONRmP/YZGz5atuLjcNSaca/2hNRrlFRWfoqwbelyguFkCbBx4/9lWBep2T9Awr8fZss8SxYfzqI5Tr3F+/jq4rw==,iv:LlptlJXckomDCHOhh4sA4mMbla6/VkoiJtkWBzgYr7M=,tag:Dp6DS7HDM8LYY3z7NWDuPQ==,type:comment]
-#ENC[AES256_GCM,data:b/F6C4+oYspDcP742ecp89yu84hSWpu1ts++EciyW3PmzTA5j8f1fhgNkmBsl9db+3cLFCtRPUuHQn4ZtQ==,iv:QmWHilP3VT1i7StT9pzRjEyRqKK5c3brYusEV+NGnAE=,tag:Bhf6DsGyGr6usAxVn9QpuQ==,type:comment]
+#ENC[AES256_GCM,data:wk4iOgFZubfrQdEWCuhWDKkoZOUWMkXtpxpiEi9bOE9fIBeDc4e2drGbKjFIs5+Ywrh2r8ahbPTeAKYrnvRC0KU0RCt/VeRgwisgCw==,iv:zvByFwqi+g8oMvdpAroxm+aCM2173CxPJOHO7U7p2o4=,tag:6QQDhTpl39XBEjthzv0ywg==,type:comment]
+#ENC[AES256_GCM,data:+WcWvFZLl3kSMHYESNE+Cm/k3xwZUS5p9/ILzskifN2S0EVM2WFM1tQ6tCKAS0Byp1vw1JlOsCdr0ghvzA==,iv:11zmuxtshUUZC/COo9G63nvSB4rxVsrd/W+YcpSMIMg=,tag:PeTaR7lFdSOg5XZHMoEySg==,type:comment]
 _meta:
     type: rolesmapping
-    config_version: ENC[AES256_GCM,data:Xg==,iv:RQZKuNPw+jZW7Xi5E9UqyGLdnsmRRSknPhtpgDcmDIk=,tag:jvLnny6Vh5Ei93DuraDTcw==,type:int]
-#ENC[AES256_GCM,data:b7YCHF7bfiR5x0j5ZT6/oXWrC9ezETylCYKROJyPYA==,iv:vULy+0U4bRChINc8LSDNErpPO//+/wRV+PZ5jtIdQYg=,tag:UZm64avkEoOOxKOGKYAcRQ==,type:comment]
-#ENC[AES256_GCM,data:alWAIV60wub5FkvhkIFEnng0GG0=,iv:KynNR41EhwYZDvOiQhELclax0QruY1pUTtz4qR8EHaA=,tag:Mdefo30KANLNJq2v6Y7ckQ==,type:comment]
+    config_version: ENC[AES256_GCM,data:Dg==,iv:KDXSjh+rKny9DSQlls6im6JPCcab3AMpk/hNuRReEiw=,tag:2TNBNBs1zLXv3pVK8Ur1VA==,type:int]
+#ENC[AES256_GCM,data:rVcCmwN3hUG4KTC0C5Bd4KnIhAFpUNykn90qiMvB4g==,iv:ZIh1VNpjoFp0tefejnvJ7RvDCCzkalyOGoEkD4coQv0=,tag:MGb0Ly2SiqJWDGlNdkcK4Q==,type:comment]
+#ENC[AES256_GCM,data:XkCN335vHhF25Cg0puTytZPiZGQ=,iv:Uo+bLRZziYG2yz/PIOz/BV03Wf3aqX24AHVQqYB5id8=,tag:SBur9OlxJ5ZhFR6SvmZnog==,type:comment]
 all_access:
-    reserved: ENC[AES256_GCM,data:Yux0Fw==,iv:1edzksathe1zhoLUKIfM3zGugVN7RIExHCaS0F889Zg=,tag:5oOUB2X3j4D7bK0XU/j4Og==,type:bool]
+    reserved: ENC[AES256_GCM,data:2XZEog==,iv:8cBJLy9zwX5705OoeP3mnMUzraLSTNMqj/FVD2CCurw=,tag:hISKtpfd9IqhL7+oQXSI8g==,type:bool]
     backend_roles:
-        - ENC[AES256_GCM,data:fsfiiZw=,iv:C75B01L/BolZuxbexAF3YPKBhB/1JPjh4oaJz3HxnNo=,tag:o3am062hs52AtBkZYNyuxg==,type:str]
-    description: ENC[AES256_GCM,data:GjDkvWPxgKz16LfYPoJHG18/IknBAtUl,iv:lmkyxW4ApAxVY+SYoquIR6k68OO0URuBis39qHODwkM=,tag:E5XPGvE7Ta6Ea1Ug1QtACw==,type:str]
+        - ENC[AES256_GCM,data:YGFsEGI=,iv:2wVQMDpQrAlO3Mf7jzDveqGlpXyK/5M4t1yn0JcEsoo=,tag:wNpeOQ+AulGTsTaqwHM6sQ==,type:str]
+    description: ENC[AES256_GCM,data:uF9VnLFOtja1qX6ZSsmaPLgODjY0x0NQ,iv:0t4rgeQ6aeZxA8q1jBSLxiVFk5xpHeteiZ0KI4pg5G4=,tag:G3WF1qqpq5uaNV8CDQhIqg==,type:str]
 own_index:
-    reserved: ENC[AES256_GCM,data:z40tPCk=,iv:cmUE7/AuXsUhUAnvzJtojvTKWd3NikQmCAkM5kH9CBQ=,tag:8WspyTqVnd5VtiJjVA2uEQ==,type:bool]
+    reserved: ENC[AES256_GCM,data:ONZpFwU=,iv:NUhCzcjE3ZoIpQ7f1zDBvPaVso4Pb5lH5TF+NmewefY=,tag:lZFLjq9cUtZ9xHUoNK/o0g==,type:bool]
     users:
-        - ENC[AES256_GCM,data:xQ==,iv:iZnIn+7HlqKRZL6+Qkmd5dlPQheUEIYIp3VwPgbn4dQ=,tag:SxcDkl4TjYk0HFXlMep/8Q==,type:str]
-    description: ENC[AES256_GCM,data:IawUUFnFNfJpCAT4/0Zo2VuXW/cgMEOliU+IAhc1GZyu5j0otU9B9kHqKyJ0dk6GkkEE7MA=,iv:X7kYvygs+uS8mTPqtVn+81E41iW4kAVJNbVFpkDyJsk=,tag:+UdJJfSmj0dcvtejhlQNPQ==,type:str]
+        - ENC[AES256_GCM,data:7g==,iv:bs2G8nQfreU81huKBfw1CLRB/JCHHtlOzfO+MWwAUhw=,tag:3V40y1sc7ys58qiYlgc6vw==,type:str]
+    description: ENC[AES256_GCM,data:yGEF5+YlRfRzdLITiKFuDqLLD0x56FrmUYzQbG7f0VcXCli43xegUO5EeCHnSEJAr1GRGT0=,iv:jbIhAzzD2bnsYqpnTEY3lt92nAhqJTE38Pcr/ZNniwQ=,tag:b5PU+hy81g6BvcBVzJhOeA==,type:str]
 logstash:
-    reserved: ENC[AES256_GCM,data:N1u4Yao=,iv:ClKalximkBwwz3S8lTWSD93hFnKUX9FGVPwU+/Nj+mY=,tag:OnV+CxlZHD+JiojZizKrYA==,type:bool]
+    reserved: ENC[AES256_GCM,data:cJnS7gI=,iv:UYgVWM+Rq3gXs551ZblhqR7zR4IuivMbIEZWrbo1JvM=,tag:KnVkloUNPza7e83myGJJyg==,type:bool]
     backend_roles:
-        - ENC[AES256_GCM,data:UiKTekoM9ag=,iv:kTETENSjipWgfmnijOV5vALnkiBSqwEQy6pRBGhl4yw=,tag:D2jYNP26ft3wLZTFOxb7qQ==,type:str]
+        - ENC[AES256_GCM,data:aGpjVZyLU9w=,iv:0NdsSz3ce3sMLeWrosV/XX36rfEV4bCIwphFZHFMN9g=,tag:OtbmUMTE3RaTy/BRQ8lRbw==,type:str]
 kibana_user:
-    reserved: ENC[AES256_GCM,data:S48catY=,iv:jqsKxKYSKvdh2UmDsiC4WwCqEWdTX2Jni5bqV77NCsA=,tag:6Su2fATto3PJEtaUQrcz5g==,type:bool]
+    reserved: ENC[AES256_GCM,data:CWSg57s=,iv:yNU4R89zxAEzU70wzy+OVMmC+Ucui2i/z+9K3nbQrRc=,tag:OQaY5wDrX+XEJvQpPg+kAg==,type:bool]
     backend_roles:
-        - ENC[AES256_GCM,data:fIJvHkTNExEuhQ==,iv:ovmRMEdduIzbPve0aOTwTyhHCdNzYYtQ+Dmj9WK4Kvg=,tag:ksdXnXgn5h7oCrm15nOTog==,type:str]
-    description: ENC[AES256_GCM,data:OOMjeJJcx/CJmwOBWoyEdvUmYYtAhZwmlyJufjXC,iv:ki/nFbQ6bS5LQXrU1JPLzWG/ACxnVD1ZhSHqukOrTCs=,tag:VA7QTVJNfnWNWYqXrAILTw==,type:str]
+        - ENC[AES256_GCM,data:XJK3Xc1SPtPo9g==,iv:OdVcps25GP+T2ezEbpgX+uPT6RGDB34jtwOagwYcKWs=,tag:tKp+cq9RkIzFQYgp3FXctw==,type:str]
+    description: ENC[AES256_GCM,data:KTGdppTgwo7xbUa6sST51moRodk4Fiy2+k1aDMfw,iv:W3kppdUvPRPYLbHyHDLYm1lZcrU4/3wcbci+jP/Tjgc=,tag:/8qMh7CVl1b0Bj+K2glXoQ==,type:str]
 readall:
-    reserved: ENC[AES256_GCM,data:/6mJ5A==,iv:pPAT7h6eYyCWDnUBBLXbOmoJZdpqp/lxqSdDGkIgbT0=,tag:qCDW6hAyMsIm6ESxIfg8HQ==,type:bool]
+    reserved: ENC[AES256_GCM,data:o3DpXQ==,iv:cwt/ACh+4p7l/ZTCzoUoxfg3HL4eTlFmn+7w/rh1AdQ=,tag:aZ6OS4FoDjfkYUitNlNOtA==,type:bool]
     backend_roles:
-        - ENC[AES256_GCM,data:dVDihkDUew==,iv:zoLk7btNSRKWda6c9tVULWHghYlomYLmNbCxRQVj2dw=,tag:YwfrV7ifWeSsUgIsxsfBEw==,type:str]
+        - ENC[AES256_GCM,data:2W4zfnAHCQ==,iv:PI99AfbyNJ+u/Cjo65wUC0MtM4S6kGBi5UqdLhMxPMc=,tag:oLPRbSIyiPtPyj8opwhf9Q==,type:str]
 manage_snapshots:
-    reserved: ENC[AES256_GCM,data:tLcXWg==,iv:GOZwlMpwuqHRUOek6fhkqK5TEOuAyJ8hOcin3AI/ZUk=,tag:C4svVzHj+ZF10KwAwKPhMA==,type:bool]
+    reserved: ENC[AES256_GCM,data:1crKIw==,iv:iXTD50lyNQo0r9P2yenQgOz6JDVmb1EDDhf19HRYh/o=,tag:ppv9VtFFO3Ic0cMES/Yzag==,type:bool]
     backend_roles:
-        - ENC[AES256_GCM,data:yARZ1IIZnuJM4AbvqYCa,iv:t84r9p/0uElj1Wf7rL4ez1hhA9X1oFhhaFy+JlT8u5c=,tag:q+LYObV1SZpPhKRTTKoV1Q==,type:str]
+        - ENC[AES256_GCM,data:WHCsqCe9eFxvDnJ1WcIO,iv:kYQdTleU3VrZBAp815Ch3IOQBhkboIcSWadOawfhltQ=,tag:kTFY96hRLXJ5GzrLx0wuHw==,type:str]
 kibana_server:
-    reserved: ENC[AES256_GCM,data:eLw7cg==,iv:n/XscQqJAGDpZao38v9ICnGX5JpbXpbTO+JhSXvNuVg=,tag:4OkfXu0OPSaVjq2PaSQd9Q==,type:bool]
+    reserved: ENC[AES256_GCM,data:wac00g==,iv:IGTRL0VFUYIL0SlzW0g+DcBWaUXoOeQfiZs8L+Yt9gg=,tag:SWUcfuFbHXFJK0IPLTgWrg==,type:bool]
     backend_roles:
-        - ENC[AES256_GCM,data:Og1mW2tPHU5Mmstmww==,iv:xQiqHoCQ6liG9AZytDeIlKsgj26nfPtHrziG586yUf8=,tag:x5KxWaGY8o9KDI2pBmwstg==,type:str]
+        - ENC[AES256_GCM,data:0i0MsmFA55MqgFZOwQ==,iv:KsI5mcMgjTtwNbvc5Hg8Ul/V8YS99lFbV/KMeS1r4uM=,tag:8Ek1AOCOt6yLPJFI7TOvDg==,type:str]
 readall_and_monitor:
-    reserved: ENC[AES256_GCM,data:zEPriA==,iv:VIoC1uZygllu54P7PxDIkF+SSAoqIyxfFOvm1+hhtjQ=,tag:5XTiquj26DlFvwqjzvlovQ==,type:bool]
+    reserved: ENC[AES256_GCM,data:aOj3VA==,iv:fZVz9b/d5IfltN3QGLCmrwtdpukH8mGKHzB1gycU/hA=,tag:bEn7S/Jy/cNw6fmDwY77Qw==,type:bool]
     backend_roles:
-        - ENC[AES256_GCM,data:IBCvwTHTgtpsvivhMEzdEf1WSg==,iv:j2wj/2IYq3T3tbEUrVwm+e3G32kU8GIfnSovFlQ3+jo=,tag:28lt0RS2rKD0zfuyR6RBbw==,type:str]
+        - ENC[AES256_GCM,data:pn5dlucLgRR7P3HL3Q6ccd7T2A==,iv:2JmZW0iAthD3jwAmu06s7I8VbPeY3YY58jE8OK5UiZQ=,tag:wQIqEys67pYwFyz6e7Q71w==,type:str]
 crowdsec:
-    reserved: ENC[AES256_GCM,data:YJAo/g==,iv:69rL1rIAoBcgJSjpfEAtkJABJUT4EM0+FNfh+5CVr6o=,tag:MkBP07/MdrU+RQC7nfgicQ==,type:bool]
+    reserved: ENC[AES256_GCM,data:uveOUQ==,iv:feDMgd1CCMKiEtIU+T7CDwHZcbc7K+P6CBWIfGq1Fes=,tag:vhurWlgmPlaSBGHXTxQdKQ==,type:bool]
     backend_roles:
-        - ENC[AES256_GCM,data:W3Zdoa5wCFc=,iv:xurDFeAco0psjtx6IVTjfB7005DxpOr/PSsymAfUNYU=,tag:nGIUKrNpMlUQ6o9A9DCWFQ==,type:str]
+        - ENC[AES256_GCM,data:EKKYdXV43yg=,iv:t++cE/OUN40wDSfT8OTX3qbWGjZPfUvgv6PMQ7qR3T4=,tag:5AFygayMXAKr+/+kyYjz0w==,type:str]
 grafana:
-    reserved: ENC[AES256_GCM,data:ZCqJmA==,iv:L7130W0MRBqZKwQoGPwLcasBQ0xD2RMx7QCVBA4lc9o=,tag:SRLKsDE8vKAJ4LlowERBKA==,type:bool]
+    reserved: ENC[AES256_GCM,data:ePmF2Q==,iv:8htPo/Fj9FXKWkwuG9w4AKw52GxONcIOjcsrk5b0/J0=,tag:WuEI/Ex2efZIfzA1sRvxog==,type:bool]
     backend_roles:
-        - ENC[AES256_GCM,data:i24sAfa8nw==,iv:va16CzPczV1nteQzv7vxbBkRXKDlQv33S7Hl7CHxoMU=,tag:7MN228ZyyYzMtYqkTfTc9A==,type:str]
-#ENC[AES256_GCM,data:UHoXEsY1EbEbXi18Ccsq6m4X,iv:GwhngOpqs3QRzQY2T14gNIfp+P1pq0MSenD+7BqjG1U=,tag:d4KaR0owuBGB6bcl+8jMWQ==,type:comment]
+        - ENC[AES256_GCM,data:cjR/EexqVw==,iv:PK1CLwNPJnRY0VQTLP7XQIwItncHxWEJIUVxNXwxgOM=,tag:EKte9fhm5mZLxIWUffM51g==,type:str]
+#ENC[AES256_GCM,data:MrGF3zZJmLNaGGPoHaK6obw3,iv:7vHLBq3CNBpTW3bqyAckpO+irOA/bsZDPe3d5EoKgxc=,tag:oljSfLemonmH93i9zj289g==,type:comment]
 sops:
     kms: []
     gcp_kms: []
@@ -58,14 +58,14 @@ sops:
         - recipient: age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwaXdnN3k3aXlOQ0NoSGNK
-            cUN3NlhEdHJJMXQxbTZTTWlpd1o4Ni82TUNjCkEyd0ZuUVV2emVWTXU2VTZWb3FX
-            YmJibmI2RVRWWVVaTVY0bVRpR1k0WUEKLS0tIG52aFR0cituUDVOaHAySjBiR1pC
-            bHhQZkJuNHI4Q3pnak9PazVXYkcvYkEKUU80ZNzp2WdE7z1aCzbp3UnUsAMg7+tl
-            07Y1yQhjZBuHOtBNEsjHhG25OQPuAnqgjWan3DRyV9fWekWAZ66ZVA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQVkdmaTQzWmgxVUdHQUhG
+            R2dBazJ5TExIV1JyMWJiMkNIQVNVRCtYUnlvCmVWSEwxbHVlUWEyV2pMUXhYN3lK
+            YlJYcmIvMDhYSWJJbTI3eXFYU1lIR0UKLS0tIEJjSmxueFI1ZDJJbjNmd1dUUm8r
+            Yk1lVWt1SUp5MHRUa3JtSzZZZlNEaDQKAB3shr0iPCTTayeDT/yJmuMGUIMUM95R
+            hnRV912wbukYfIz5U4ToylNIkg9uD2Mu0G4PvjY/vM1N7kby4P7V0Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-08T08:04:58Z"
-    mac: ENC[AES256_GCM,data:R0qfXYAtR78HPMj2WU3IfwWERZyFBxYNluhizr7vuAz5pITt8hKH5jNP0mztutEn/ZSSPwjPiKyK/ABiiTDKug8pYAf6qA9s2XIBqNPJnv4bM3PHDxpOcQFa99NeXHljwjgBNnICI8g/gzQGIZ8YBUmWzQR33cNld7YpCpAVp6I=,iv:/U/zaRtjIVfgDC/IwOCd3RIaARPZMsSJwYRX1DP19YM=,tag:AUmwyDL5RWCyClQkNhSe+A==,type:str]
+    lastmodified: "2023-07-08T12:20:39Z"
+    mac: ENC[AES256_GCM,data:XIzOUlnOcn3wxkls9NJ7thenb+eV55T276+oDRX5KShHnsB/VhXGpJOsxBAcWeypnVmDcyHwPM78UL137ggtBy7WwlsY/p3gHN8JaMf8xYBGEO8EQzF9cMhJyeelCfuaPMi9w8I7/5lEuyLyyxFLfYbzQsOxyijjRgXT7pvPOwM=,iv:v74YaQhpsuWxRJCfdBKO2v6ZWZYT5BO1yEpSuPNjr/E=,tag:mOfasvyWld9ZsqL5xmjnQA==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.7.3
