--- a/apps/vagrant/logging-elasticsearch/deploy/secret/elasticsearch/security/whitelist.yml
+++ b/apps/vagrant/logging-elasticsearch/deploy/secret/elasticsearch/security/whitelist.yml
@@ -1,67 +1,67 @@
 _meta:
     type: whitelist
-    config_version: ENC[AES256_GCM,data:tw==,iv:vwH0Zcfiy4er85RV5d8nmaQ0/5YN0nE8CorMHHwUeIQ=,tag:d1Svz8NT9FOkOpiJ4EGhjQ==,type:int]
-#ENC[AES256_GCM,data:hVHnhVOzE9el7d3CvA==,iv:zfcZyuLojyNW0OYfO2sRoQN9nixEknnMMJ1CC2qOKak=,tag:qxlvcW+Ay6/1Yj3XyaCs2w==,type:comment]
-#ENC[AES256_GCM,data:blQ0MaLguZ3qH4UZLSjRoZAmENQ1uNTU,iv:62xpwAFEmv7bSb1aOrGGrJHA+zLuiWFHlWPZUCLU0l4=,tag:pbwjf5SgdevoHaGjxH/b5w==,type:comment]
-#ENC[AES256_GCM,data:L7RBL42RJ6ZeAcEo4kgLlcVjwOkxWNsDkPtKQV1meKo1UAKETUJWE2UCPbvFLRCd2q4nzGnA6Guvug==,iv:V7NE/LU9MPzAdRXYvT5Mi4Ue3gDxh4So0n5x63u/bW0=,tag:slzCo5SVlbUChFUxGb6vaA==,type:comment]
-#ENC[AES256_GCM,data:+o8AhN7Kd+nz7F/bdNH298bY1IuHKZKh+8jrujTj8Qim5uYXgluvyd3bZcxwE8TlcYBE2eFfcO6FFrWn/auwuvQ+1iflUA==,iv:rpPKg/0SkbFXUjxfJTt/3HomPuekI/1RqKGVhiK3F0E=,tag:IiJOKTn3o1IaIH6FTvO44A==,type:comment]
-#ENC[AES256_GCM,data:H9tPEQslcymsZirWKHtJ0BzhFOxGTIfbqb5Wa5n4vWpyAeaVjCHf7q28EO+VzTkYMqPN4ScmwMV1vQX6bK18/0QAx7YhieBWTXXVHxLAkBOsbw9bvSQuLUa/usDidJ1clQfibWmtPrhCcy2QJqaIrdOIDRig/0Uk6NwVGTUXxQ==,iv:7C9YnjNJ5YFPiIvC6gdKdjnwEpZKl1sZOBnywxYLE60=,tag:702dVM+rRB+kqrixQvRPmg==,type:comment]
-#ENC[AES256_GCM,data:rHEM9Vvb6zSvuQV3suz9ns8WkxVhg1lIpmF7Gh1vv/PRMOjxsPXf5fNlnhn/NhNqIrrl7P4UOkKPUJW3vRJ/tpEP+4Gopjc+a8aNsHjgFw4WCufBz2PeF/f2,iv:0sKG79/MHn3YpsKTfuAYBPDH2RqFkzgV2hDFWFYkoTo=,tag:Eb+eO3Su+OY0UU8uNXnC3Q==,type:comment]
-#ENC[AES256_GCM,data:LWrq7tyoSooQqfR/qbdmJifcKyqzqMbQiPFTQur+7T4=,iv:y23rxvTYEs/YZT5Xzoh5f7EF8mztdHplsxr0LSEBJdY=,tag:O9dA3qPE0Y5SOttYXAuuIQ==,type:comment]
-#ENC[AES256_GCM,data:P+EcGoJrDieLlus+/MBnbksnlSh1u6x4gtSrCJeIv2N5iTmML9vNEso5tMJfv9QcjY2O+4+KQmLU3RzzGbjUIfx4wNcsWQNrOQzNgl4Hk3RDQlSD8aKezrSbaICeqTlOVkZLjGeouRBcOt9/AzsO0ISHrPGE5Hmvbvjq/c5/NwGH3rM1nl7qgum2,iv:/mAvVu0uYDZWkSTfLJU8AZnQntlifa57dzsUsaONBjM=,tag:ZzuiBP9DnpExlmFgI2NsCw==,type:comment]
-#ENC[AES256_GCM,data:uOpN1sb9UerWHfDWULeB5Nd6K/ovXF7904hIIQWZBETb0zEfCOvyLw9CAyo3Jp3b8/UuxSmhxLkFza5CyFTjEO0zT7FaC3vZVOSoYNnUxjChw6lQfNXmGquNWpS2FJL0szTELpnDQ8/L/GWsVhru37s8eyg0dNh7i4mbDWYErOIWLxmG,iv:yg1b+25fww4KWLgEZNOLkUWVTIHg1uy+vkQMMGywEfM=,tag:3LOUzdwXVpZYaXSr1hAucw==,type:comment]
+    config_version: ENC[AES256_GCM,data:Eg==,iv:ZrNzdSPb4gdSgaxyowu9xFeUHDfr0gmvbz8RWPn7S1U=,tag:GAdEAZ93EK8KVCRyTGxKag==,type:int]
+#ENC[AES256_GCM,data:jtCs/R06JqGgxDly1w==,iv:AbmsGXMCvIZPmh7bhaZH1JqtcLOY5ZtMFJK7idGJOJ8=,tag:49lIlzcIFBT8E1CgbCKXVQ==,type:comment]
+#ENC[AES256_GCM,data:/ew/htWU65VlxLqaXLgvR890/dIw7hj5,iv:LkwteTXUbgsi+Le2dA/7luStWpvOrKzy6v82FGkgB0M=,tag:bT/Ri79ZAiWfne0FgFYYew==,type:comment]
+#ENC[AES256_GCM,data:HnBjey7KJNHsUF3o9LN4ty9PWHTv3D8VehJC8dDIwwlUw50yfdK2qE9TCzib7mGLCvwSMcNVY7o3xw==,iv:dl5lBBh+WLOls6mTMFpOaVa9TkKcokeXorCgaTVOk8Y=,tag:TdBJk9z8wQe/xnyucLzeBA==,type:comment]
+#ENC[AES256_GCM,data:wK83wEF6KAIC3/zrhampPXKqrPfbwlaoXHWihka+WcOlMhay4Lyh8avZlgejxyxlucq2EVelBebYhCZyTdKvnEHjWMQ5Lw==,iv:40/eTUgme48BKGu0FTVfQsvtGxRprtYccn7Gj+OpnU0=,tag:PAI++5YZrm3ZlAtWv7EzSQ==,type:comment]
+#ENC[AES256_GCM,data:CmS/Qc6pYJsrcq1J7zWH3vrsc1YlS9X3v//Ua53Ob82x4oHq/VrhBAOg3ydQlfPXaJNswD6LGkm79Gu0AYHE5XSVEcZNIe18oWOGEuHOhMNwfhzvjwXKi1sry5tPqGbtYztgNR4jRw6tun8yLElxNwK0b6rxv3dB0q9TLez7Ng==,iv:jw3xyJTSkX+Fp6F9EK9Luqb4vwAHyvVPCte0lc+snYM=,tag:5Cl7ck5msTK444IXEZxFaA==,type:comment]
+#ENC[AES256_GCM,data:TaKx6Hr1FQ2PaCR4ZhKJrMGjH0tpBhi2sGWFkgu1oh6qV17nH9cxk2hBQMEnvll2ZKQ3oRkOYrfbXEY9INUImUnjq0BbJDEqQqKepGB+xkf/ScjJwgKLqUMG,iv:qDFoDofS5Ob7H9l943O50jA0S6tLF+BVMRrZZaXIaTo=,tag:TEctYFB3++xfmLc+86RY0A==,type:comment]
+#ENC[AES256_GCM,data:iB49W9dffledK9Hixps50aDrLBs5q/VwrVtsXAArmZc=,iv:fm9j5TZoR6kRPbv6fdDOGzKyvGq2FcKoK0w/549TMxY=,tag:PWuNpAGoa92i0lnmp8pNVg==,type:comment]
+#ENC[AES256_GCM,data:j1JNz5kzxOmtmO/J8ddqgxhqeeIAy+fCl5iVPNMAE1vozAEsEzYY5ce6/DqQsmQx1YaR8IrngpvOXBD0ieD14dyklkfRfFQcYndtNfSXLkzXD1yEGLeov4bKZ/0XCW6XXSz9FbIIQG4piJRDhoPYppQvYuvVPPGSR6rc8fYctQCt30juyBn1G7ol,iv:OnCYnqhAQJ3l5fPIa2b1RwTijIGFLxegqNwpRUJttlQ=,tag:BFdOrnzOVSCuxWoZfLx0AQ==,type:comment]
+#ENC[AES256_GCM,data:6XEcQQ0hDN/jH3cfIU/F2zQQbeUCvz4cczIlLKXfnY8oOnUDRtrIGWQ7nbN+kk7QauWd3ygFRBYI58VqS443h+cGl/bTajWN2IZOPieoXhLVmHYfj8j6MgtJN0UbR+eQxKzsdMGaZkuC9NkcepV573NwIeT1AnmWa+Be3SWTjyD21kqI,iv:TAVW9M3Yb4uyCsBKYcxsza5bXj28G0Ja8q+cce4ecKk=,tag:BocdhabA9dFubyxq66OaLw==,type:comment]
 #
-#ENC[AES256_GCM,data:wJ+/gyLNau4yeKMYfr0Hzpkl4/Uo3ZDQI8UCuoXHMrPyGSBPY/OZK1wwAa92KxzipQ5gg4HsMqTwHxKcGhMQfozUWPNhEI9qbbDcwy8Ssc+IbyOQus4mkX7I5lqQO5k=,iv:PZPbu4ICgOPQEIFiT1xOcJAZLI+JARPJYEftktHvMEQ=,tag:Xi1shaD/RbIr+I3RyRjbcQ==,type:comment]
-#ENC[AES256_GCM,data:LWjLgqclcHFnVvpzFxu7ThCDWZfdcIB/qdvPflqEQzAppcqPNY6DjrTiyz532PlfkNaxc2jWohrmFWVCAesofctG5lMFmRsuNi37dX4J6bfwo5ODIXaA/0en3O7u5UPDUwR5/Z8=,iv:KWJklxgc0JbMgXx814SMTIWbwd21eksArC9Zmdymcu0=,tag:mkyCPPKzPrbaWfFdn5yZFA==,type:comment]
-#ENC[AES256_GCM,data:7D6Lktb5DYkVaOo=,iv:FKxms9fSCDe60GgO9s3DKUCFAYkZtG90AD0p/PbaQZc=,tag:iPJvMh/0dbOHy3rD7oUPEQ==,type:comment]
-#ENC[AES256_GCM,data:Evj/+XoQQIhigxwA1RPlzx88M3zJ217cOfca9eT+1TksYS03ZFRmFLDC2yfWVxd5bYcqQFGGptCfA7M5,iv:6CMXENGvTUEGLHEFSxRZvKIn0fctZ9ZTvA7rDJd+ino=,tag:S8meu4Xs/e3ZGACGN49NdQ==,type:comment]
+#ENC[AES256_GCM,data:xeRB4LK1X4gXwff5nUFpvH+mwa5n5s/X+o/RedRkr1q66uP21Cbrr9iKzFCwDmGHYzhD+EdTbw65hEWVWNhVMO49ujwWM5qm8P3MjJy3WmRnwBNjvz8tU5gf54uk9Uw=,iv:Bv6bGWv0eU1rbTQaQ7+WHJQxAyR5IKmeMlZcXCfKiCE=,tag:IJNLoQgTpfeD6fy3wgrMew==,type:comment]
+#ENC[AES256_GCM,data:Lfwx2l23AJqjxblPaeOZcjhXo0WrddAjd51EEMQun/tidlzGS7asor9QBfmq/rjtGI5y0hLy8ZkibLC0SsG6M0G/abTmmy8lk+G0MLtJBl9LB8Hh8Y0xobpA+YiOLdj9AdEWmNk=,iv:D4lHa4pl3u9UcH8EQN5hNlQmIFe4rAjK5fbgwQP99VM=,tag:28wPRUhERlQsC1+xRNCoAg==,type:comment]
+#ENC[AES256_GCM,data:CJaWNswlhJ9YvFk=,iv:qjZhB1LeLg4o54DZ2hGCrfCaG3xr4V2730Ms4xoX6BI=,tag:aK3ahXmTFHZBHQkHII4eeg==,type:comment]
+#ENC[AES256_GCM,data:Bt2dEyFozQazIHwkWNGG0EshfaJ6H68KCporZgHbOTtUEG4qtRgOWjpWnFFBagyy22uQzMojfhFERhoq,iv:0i16JALNzLl/0U9KiF2rJ1p+4bdJDc3RhsL68KE3AEg=,tag:k2/U8Pr7sB3hW3+Y8lhV7g==,type:comment]
 #
-#ENC[AES256_GCM,data:aDPxTLlPZg==,iv:33Uo6qPJcQpm/xSrQRRId0OeCDhFR3iowZPsTES0ZBc=,tag:YbzJBEJ/GgTBzQNeGz2qKQ==,type:comment]
-#ENC[AES256_GCM,data:8ny/rgOLLUtRqGAZednA,iv:vI+v9SFdzauOZ45mgGc5ZJv3ZNGypS187GsHt4I0EMs=,tag:jleCfCVyW0Iu55d79vzM7Q==,type:comment]
-#ENC[AES256_GCM,data:/EPh+7QNtm10+jQ=,iv:3Tf1ANeunaZ4k1mb1JuqUVUlBGRtvrCStUQzUDwno0A=,tag:EZuIA95I6+ljFck1oGOutQ==,type:comment]
-#ENC[AES256_GCM,data:NVVUApoQRURNGQn/6s6+TLmn1Wkajis=,iv:KHC3U7ienUgrkBJLkRIktZF11XrwnFyp4aMF60PbDAU=,tag:rEjm2lVYUk1EdTBl02LK0g==,type:comment]
-#ENC[AES256_GCM,data:jlxW8G734RSCt9Q=,iv:82IexOk6gDtl74AceoNRxtaEfFejkCQEBnGOhZGurd0=,tag:c9caoDgHzvduiNxiZyM65g==,type:comment]
+#ENC[AES256_GCM,data:X9S968YDpw==,iv:HBjWBuTDa4EL/WsCjCUVNx1JEdHDS8VV4W1/LjpNv1k=,tag:xhYrwMH9CfFqyw2ITepDSg==,type:comment]
+#ENC[AES256_GCM,data:ZS92GoIrL4TsL8YK+ggl,iv:6v8No6N4XGqwaJspm0Hg20Ww9eHIdUzmNNA+wGKaKTI=,tag:QvdcL/lLbAHrCZnZrfvAMw==,type:comment]
+#ENC[AES256_GCM,data:xM4m+ZRg29DIzUk=,iv:JxogRyM2d7VDtrJik5HjQas0O6xiLt0a4FyBDc8boIE=,tag:L94VopjdWEPuRPsqKrXbmA==,type:comment]
+#ENC[AES256_GCM,data:jelSnlbMCo2mmzrCnceYoPH2/GxCJN4=,iv:clfmUiU/vQZVtU6IucCB//COvvEoctjx0W3LvYaqDqk=,tag:CnmyCN53sfQM0r6GEbjz7A==,type:comment]
+#ENC[AES256_GCM,data:Exg3AabToAz4JB0=,iv:DGYWsJEdWR5cv6+DoOqZMzmWVzf/j6bnZC0WReY5t3s=,tag:nSh9ZbNkOMmwyPhW2n3SAg==,type:comment]
 #
-#ENC[AES256_GCM,data:WCJChJbZ6h/apTE=,iv:IX/amH2GaEiYEMaf+2dEdQ/xDi/bS8E+UdvL2DmC6hA=,tag:M/t7oMnl8AEQFYmXsrxlIw==,type:comment]
-#ENC[AES256_GCM,data:HD+Op7UjTcKlhLxX2wNYhwJpGNW5rOT6GulLblY9i6L3eJFLSWRCsl/G6HeJBqV4BvGql2z4W/ZdbVKt3anJ6shT6NBeHfYCa0abjUR5MepegOyI,iv:uRfv/GUUcyWpzOzBSozsq5PM6y7uDlsebo9z95ihJPQ=,tag:mrvOtKuoBMjSpcD/fc27Bw==,type:comment]
+#ENC[AES256_GCM,data:YxQyrV6mEOWT0/c=,iv:P45K3OEyWv3x+4lwYjhwInjf8c0o+JgMxdp/qQ7FhBw=,tag:R3oXTWGCn6XfnJJlCFyqmQ==,type:comment]
+#ENC[AES256_GCM,data:o3jbh+Daz2hYAi4dIy++9KRCVW019C04+hs4G5Q13vqa0MWpN0I15dFCO8CCnfb1PCw59ijC2sjYIKsk3fmkQQC/D1SJNJIfcKUO+k34XsXR1zNG,iv:RhFz/OWL2t3TWYDBKt4Mr6Cqz34kZGQpNVfIksUg0q0=,tag:xXRNnZJSSsGSprHINkrZnw==,type:comment]
 #
-#ENC[AES256_GCM,data:VxxrpisaNQ==,iv:wc0IFY6Se6srlhLS3kYXbXS3t1l/luCXDTwaO0MlVJ8=,tag:hXt5DXhS/oMWVKK1QMHa/A==,type:comment]
-#ENC[AES256_GCM,data:mwS5gMspEWVek0DM0Bvl,iv:HWIrOmbQ5ez333DLnub43y+EslI/G13ZPwUcAnQBnuc=,tag:j4XB/1iC0kpaQGPRvY3s+Q==,type:comment]
-#ENC[AES256_GCM,data:QA6y3O/8ozn16ak=,iv:UWwldSGmnDvy4KKuNhoizcB0UuS+IgqW99nEKRAoUHM=,tag:Bc+8Bb1GYC0IxdtSwu0lsA==,type:comment]
-#ENC[AES256_GCM,data:XFMZQ2p5nwbYwkNTgTx4kwYzEimtLvU=,iv:RWW2AysP0fAPORhri0UNYz1M+MgpytRzUswLwowfQfQ=,tag:ZVx3HpNoeyc4DLIGifJSNQ==,type:comment]
-#ENC[AES256_GCM,data:GuCofCdn5IN7664=,iv:B6xxW12FGbFkLFTHZKJLeyC12oJe8Jvdd3TwttdvsE0=,tag:JyeLoz0VUGUNUBEYt7SDUg==,type:comment]
-#ENC[AES256_GCM,data:nAvrAHn1dyxEllQ=,iv:pdQ5g924q3n6li86JhrAoPe5HKcBvUHx4tT2NyEdrJ8=,tag:ct+EtYHvzdPiXn1wC/H0WQ==,type:comment]
+#ENC[AES256_GCM,data:2DJxfwve/g==,iv:eeAWssU/Pneh78KrgKNkby1Y2c4RjUkHK2V8qnDuqXM=,tag:via+yy7jr5b4Kn4Ih/PTcQ==,type:comment]
+#ENC[AES256_GCM,data:noa+0fOm6BZwRThLQ3pF,iv:yytjwYp1zDDOFBgPwGVRICCO/7mZJ5cmyUV0MRqXO+A=,tag:BqwO+1ZNg6W/wfZ64VYJ7A==,type:comment]
+#ENC[AES256_GCM,data:1B7ffYGt5W1R0yw=,iv:Et1DbpQ1QgEy9By7oBfAqeYeHN8LJQoJB2WN+CFfpcE=,tag:jYSYqzWzKFccj8AMlYuWwg==,type:comment]
+#ENC[AES256_GCM,data:PER9Qgl0U2VMyARrgBWi0wiBIbITogs=,iv:MpsPcpLcpGH4ATed7XlXUCazmrmgj7jevwalyGd4NOQ=,tag:fvbOd6X8t8HgXR+cpXkLxg==,type:comment]
+#ENC[AES256_GCM,data:8cpPX6WybHcUaSs=,iv:6RoyDMtz0VVakDvoxAUV4NZmM7HRMyMkp8x3GsOW4ys=,tag:RWSDny3VAt0NjblUCnQODQ==,type:comment]
+#ENC[AES256_GCM,data:iQoIlaoQA5Tqpvg=,iv:PJQR5IRApB396AnUIcxX7+MLWKolmIT2Ttb8WnZSZ84=,tag:LQfv2hq1HULtcm4aRoMztQ==,type:comment]
 #
-#ENC[AES256_GCM,data:jvRUQmBlcpC1hAM=,iv:fSOfSCqcnmKzzKYfDYXMKXjzouvWYHGoJ6Pc/8abPg8=,tag:EvF8S8GqlNiruztmgwbnJA==,type:comment]
-#ENC[AES256_GCM,data:1Pa9CUdOPhRqlA5XSO60Jfx6+Qyu/J1x4eprrby5Ra6Y1t4RPPdqaKpDtYj0QbegQH0x+Hvafcocd/yiq8iLG3yO2v6CRWtByZhhjkpW1WMX9ANzHxwVlY9ynA/AE5lh,iv:z6M9qC36zhnLjbGaEu+8IU6QQH+3PuTwDZAe1O08K9g=,tag:cfnQ/fmV/Tx5SV5ao9b0LA==,type:comment]
+#ENC[AES256_GCM,data:aq5Fh/YPXHYV9WU=,iv:qZ1QhWa3jKK3wGaWSyPMjL9FjtAWTjrSuvzljmYF7Pw=,tag:N5xtBNtjTRjsj6MLedv1cw==,type:comment]
+#ENC[AES256_GCM,data:aPF14935d1aQXcR569Y6HOJjitDI8QzNk+x2mBmN2HalvZPzyF9GMK9vUY9gY06lSB0T8g19mk2DaleYzUy5UR/dJCRjDLClcow2aexTnK5vwhhvkzzMuBe88trEHjPz,iv:viuIBvnNHUuLdpoDNJPc7YKdBgZn+j5xRQDJ+71ZGO0=,tag:V/4icYtWRDh+YZy5DpWK0g==,type:comment]
 #
-#ENC[AES256_GCM,data:xnn1Zz9dDA==,iv:iRPLB/wYWE7TfxVh3bUdO3O20r+tBHpQNvXtkviuhbA=,tag:15Dc/Jn4t3I94V+kJIkxig==,type:comment]
-#ENC[AES256_GCM,data:d7xI6hsHtRIrlKs4QK7g,iv:8fajMCvsPOxEZDMe+Yrs8hcXLXBTzFzH2XM5sTzvfGM=,tag:xKeUwLdT9BtjYFSqyMpMAQ==,type:comment]
-#ENC[AES256_GCM,data:MLHce1eerROOVJU=,iv:uDG1NPb8v39O01l11/oGf79UmtB/bZPHc0kBTWqwlkA=,tag:cCmLybczOVJBaMs2zx2oew==,type:comment]
-#ENC[AES256_GCM,data:tiqx2ElxGuuRd2RXqqAKOjv5EkrG5wM=,iv:BVuW/zBLUj+C5E2pHbrqKdjIQi9aWQsDF0mcbUgdi1o=,tag:5zOqRbHm16sy7x00VbBeFQ==,type:comment]
-#ENC[AES256_GCM,data:RDh/zAMMSCPlQvo=,iv:WvhnwU1mD47OaEbdKYYlbNVIT4Fu0/2C7e9S2k5saMk=,tag:eMs+OzCo3JbNo/iO4S9zSQ==,type:comment]
-#ENC[AES256_GCM,data:YpKJCH/6MdrC0MA=,iv:PaUei5gM5I8mE21qhE7abCqJJq88eYHEk2Nb9cISLrY=,tag:PbY7l/1Hqdt4gP1s+Knn3A==,type:comment]
-#ENC[AES256_GCM,data:XbIvKUdXeHBVb7K8KRcPQw==,iv:a0Eaoa6HdcrX9fX2OwMnAUxdq8DjN1ZTjq4hIN2jcEA=,tag:4Dg9xj5lbJW0L1HuU4cyUg==,type:comment]
-#ENC[AES256_GCM,data:fUVFbumic7Hirtg=,iv:vOYpCoiLPEzvg3e0lwswPYgyiXlO5RMJXz+vejHZ0PI=,tag:zh+5k+zwsZ806K62d1LpOw==,type:comment]
-#ENC[AES256_GCM,data:1nz8g5Lz4Pdi/TT6viZOvl0=,iv:/UCtl+5YzOf9hEjHAel/o84pVjJfO45fwB0iaZxlBYI=,tag:4DMC9TMfARVTifAxqlAUwA==,type:comment]
-#ENC[AES256_GCM,data:2D/06zh/9A2b9s0=,iv:HpWBUwDeGxnwMy4zTaB1naX9yax327sXleQ6HS9Fl2k=,tag:AOaf/jIqgXGCIQECXSfQpQ==,type:comment]
+#ENC[AES256_GCM,data:HzS06rmzgw==,iv:B86uAMZPf2MefPvx/Ip6LOrEgo+2SzS9KSQg36po3pM=,tag:DfrOprkTF75RIhXNz6b/aQ==,type:comment]
+#ENC[AES256_GCM,data:b84UAEf6WGIGmcL9aC/5,iv:JPth7bgW2V5jm+sBQw47ud1Nn0aqZKYB4/V1PUJi3pI=,tag:VI8k88T0DO9wFDWoRl7lLg==,type:comment]
+#ENC[AES256_GCM,data:l6NSrIurZ8pg6II=,iv:+eild3axsiv8i1+kUx4GdT6GNDDnkhgOaiVFRhE37u8=,tag:fZtC9yZkvEeQV6I3BP5MgA==,type:comment]
+#ENC[AES256_GCM,data:SWFY53y6gLVDFdeSMxt+6JdHOxPU9l0=,iv:jVBoCQSPHsuv2ExUiEGGsqvuV8s/3MQx793lRXmkO4Q=,tag:AxCcRDPXBH4W/5cd7Aeyzg==,type:comment]
+#ENC[AES256_GCM,data:DpaFt4i0IMpQvac=,iv:upaiSil1SsF6k578HgHx8mJHydTmjZLVfce5//pGAcM=,tag:XGo5wGzMKgIb8nglUHQuOQ==,type:comment]
+#ENC[AES256_GCM,data:xtkEXLtjszMnaPU=,iv:N9BnjFuilSVIX2va8Qf0vVOi8B7ncA8GdTD5NuNi86s=,tag:d2qTS0rOkSjHUNqncQ/aWw==,type:comment]
+#ENC[AES256_GCM,data:LKmyB6o4nptL6r3sue34NA==,iv:KdKvXcsLWDxe5y0BWr7IOpxJ6CiV5pjsmEn05PG2Vro=,tag:o+b/u3azEdpn91fQRoVGXA==,type:comment]
+#ENC[AES256_GCM,data:VuiLgi8abE7QO7A=,iv:RqNIg+gmMf3WQNCwSP4GdzooaUGi6urRs0X3bMsjaBs=,tag:QA7nOQ8/83Bem7WkMSUtDw==,type:comment]
+#ENC[AES256_GCM,data:EISDb339Ur9I8FIFNbPl6uU=,iv:2TC/1yrO/5Qu9jZArti6EO0qOpFCS5CHE4Pfe9hO/4w=,tag:oYsiAO1Utzc5ceUMflvE8g==,type:comment]
+#ENC[AES256_GCM,data:Bq6oOxNEbaw9fik=,iv:t/wuwUUXxyLta35ogeDgquI9kuzZXWhcx1TAxyQZUDQ=,tag:E4w5TYwzcMAtiKYJXhyXNw==,type:comment]
 #
-#ENC[AES256_GCM,data:QlivNnREvmL0w6k=,iv:8tOWbTrLjP3yR75/K3jGBQvNfGpFK5Tlu4xQramLJp0=,tag:+cJM/7omJYit0BQRM1KWkA==,type:comment]
-#ENC[AES256_GCM,data:3wJI+NSiufVQ6gx0y1ytoUBfNG2AxMyvy+LgSeJhvX0+wPF5LjvqHnhUJEg5r5hfUW0/uM7Biev+myKxvJyvxBGZqNDRKN8=,iv:/0OcTQAThOOywunAy+FKXV1TpyR4pkNfzscnhL+RIrM=,tag:RtSfSVuwUC7Fip4X1eHR8g==,type:comment]
-#ENC[AES256_GCM,data:UeBlDapQyYuZlCpGn1uwDg==,iv:nYA3bR6BfPjXYr0YCX8cptCQbhq+0VffISMJtnhdkxA=,tag:hwMU0+xbzdFp/cT18kLQPg==,type:comment]
-#ENC[AES256_GCM,data:R8VLf18khzGP31E=,iv:zpOpYVZgGufG8reOQUidIbQd+TtktZEZiG/kDNZOkIE=,tag:batG1GvTB3vLZjVMFjGR/g==,type:comment]
-#ENC[AES256_GCM,data:S9AlTC52MiBzs2wCO58M4b6GZjEBR1E=,iv:E2yEParjP7UXsKhrgIljBchofP+d730M2+N0DkLH+z0=,tag:kUa5Osupw8HCB1tElP61IA==,type:comment]
-#ENC[AES256_GCM,data:gRpZdnSKv/UW3ws=,iv:pXymBCbrHiEcpkeVytqhfplM/TnQi+Bo/7fctiitGQU=,tag:kwfoNMBVvnTBYqeIOeKwFg==,type:comment]
+#ENC[AES256_GCM,data:mjJ71+/Gt+4NOYA=,iv:er/JXJ6s8ODeIXGmfBzwUvU+VCO4ZLtoQSPYMqnW9pE=,tag:k7ZswLr9sZfwLPgj3gyR0g==,type:comment]
+#ENC[AES256_GCM,data:thxRxYucZS8KjMsCYUEEWWNAwyFAmvr0AE32XeazbBe47ptUPg6eV0GV+sIM53a6aeOAbGn2PfE/79OXQKiTbG93CmzlEM0=,iv:qyHmCnIv0eh7IrH80HmaRXDtkwJ0v7CwpzYbt+6O21Y=,tag:JWCRX0AT2Met5zcB+lV+HA==,type:comment]
+#ENC[AES256_GCM,data:aWpRgTRQXDicQAdYezHQ3w==,iv:OddyglEHwTrha2GzyFuBl9KL5RHa4dN9/Yzaw+RPOtk=,tag:mAkSuck3LRcrGs9O+DQYzw==,type:comment]
+#ENC[AES256_GCM,data:9ZmC/XNAMjwcWB4=,iv:/EswMyEfsMvk6WXg6woID/gmjJ/J3+U+HYUhuxRfl7M=,tag:lhrZ4TzML1JT+Szjndlz4A==,type:comment]
+#ENC[AES256_GCM,data:bTofzrhGxc0S1o+wTFivzeIdzz90coA=,iv:6WCeZLC3zLfa8dCWnXhF3HtSdrwMFexBl1MPoq+QYWU=,tag:gcr+kM8ORE01ZZ4yhVlTIg==,type:comment]
+#ENC[AES256_GCM,data:1PooEwY1OV+/uTA=,iv:Qo5nAM+4gCILtys9znli246b/E0oj/Uj6QdTDZsR9dg=,tag:CPpDJPsptNEOka5XizOaVA==,type:comment]
 #
-#ENC[AES256_GCM,data:6arskrJA34XwdF6xBMmCtx73Z5i5fO9gnVXkfftZ1H9Z40PR5jycJ2+5LtkuEJa9Qj//JTaRVBmFH0zY43aW7calHaT5mN+0A8+x8MDrQJMwnNDhv6bN8s2mY/zQfIOYjbkXGBL96FuZzCtdC3E=,iv:ajPSY4Bq+IMrVl/E6Wj/2YF3BvsZaoLgWAEO1rZrCc0=,tag:PxYUoYPpNCVgPLfSOaLwIA==,type:comment]
-#ENC[AES256_GCM,data:dnvHL1KChCrU1rejfIs0RxX/PaUAp0z9,iv:UFytE/KZPuMMftmc/xh66gplGSBv1Y/cfYDoMzaAi5c=,tag:jRlgIqU0itQeTwmTVhz39g==,type:comment]
+#ENC[AES256_GCM,data:F+9JaiKvr+TT29+s1aDm4WbdwjO04/lHf6Sfh2zQzl0SFWICSIUKEgXreaKtLqB+i8P6FUfeI1ChCABUFrx2aqNj1GBYwH8a0cAVgzLrzhz7uHYy6B0QTQFhL6hpNueg560QVavJiGgqRsKW09M=,iv:6RFydNwwI3TRX+oOnqQ6nr+nSjy4HkYL/NpnT2YBPb8=,tag:PYgGQ5AyhGvRqpXsqAjeHA==,type:comment]
+#ENC[AES256_GCM,data:X1BAQbDgO6qBt4i3a3TfRzYT7/nbDNS/,iv:pJPTPRE13fAAkeoTCHIjHyWLdAt18+bk9mLTTgg74Fk=,tag:A198L6Vjw7zHXZLumb0NuA==,type:comment]
 config:
-    enabled: ENC[AES256_GCM,data:TQDOIVY=,iv:Ni4ZvtnVhr0/NuUAuBb1i2/Vg5OnvIDG7fyMBWJcQ6A=,tag:LDtS92rIcWIHHq9Lu/THMw==,type:bool]
+    enabled: ENC[AES256_GCM,data:Kq8IcyU=,iv:xQHhQplBnaA790ollWeHNkIhoJ6NG9GTqVkLiwgjv/E=,tag:N6X7Hci8Qav92UoIozRj1Q==,type:bool]
     requests:
         /_cluster/settings:
-            - ENC[AES256_GCM,data:jkO4,iv:vrePoLkKo9a4GVv8xGnNHaoRO8p9rJswySl15QXYptU=,tag:IKqGPrZ4O5mIr2LGoCvBIA==,type:str]
+            - ENC[AES256_GCM,data:JIwB,iv:hJx4jHKYc50L+ZlWBTKDwBL0EtVNC0OfOxXkfIqCaHs=,tag:z5c1hWPKnXbAIZkgqwCc+A==,type:str]
         /_cat/nodes:
-            - ENC[AES256_GCM,data:i7/C,iv:A9xk8S+Rn1xQ1d7qc+pGPtk9mfRViglk/7WgiKq6OqU=,tag:w33Qfu8XH+TRqmR6oSGggw==,type:str]
+            - ENC[AES256_GCM,data:pgh3,iv:hgwMgNKmbMLf5ru0vfmSTa2jsUczA3m87jOT1/ytICo=,tag:Ecc4w3aeFXTNQLznzvQJhQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -71,14 +71,14 @@ sops:
         - recipient: age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1b0N3dW4zOU1WWXZaZENp
-            cEpVZUZxaGxtd0krSHV0d1ltRzJOQTROUkZjClluV3Z0M25rY0FhWURKOEgrbWRl
-            b09YQlVNb0UybFBodHBBUy9idEZFMnMKLS0tIDFLY1NMMGJKWnRkR0MxS0hrUGQ1
-            dlNqNDk2Q3BNOGo2Wld1WkcwbmJ2V2MKSDsUpO05UYs4OVCVyyDW28beqVB8kYk0
-            JfSOfP4//WGIcEngHiO2EATO5OVUBZj0WSWsodQzmwVNpkkiIiZHbA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKMHhrTUJhWFRQd1dBYzJB
+            aTE3cTU5eTFITW9EdGZJOWo3UGxvc0orVDJVCmRQRVBBc3pxM3ZQMmllM0wwTHF4
+            OG1XdlBWNFdqQkhUS0NuNjA3bGJmZEUKLS0tIFZCMFlRTDdEUjhFZ2ViRGtXTVBW
+            SUpuSkFLRmt5OHpwclBtNGlPNVlMNlkK7yws5cJ+FUJhTomT0/Cz90nYg1XRfszh
+            YDPJu03DwrbJl6uj9mvL90Y/TTH8aEkDIjyrz7+kPLxw6m3JnO4U9A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-08T08:04:58Z"
-    mac: ENC[AES256_GCM,data:hphLmPILTtC14l7K8Ph4BQ6lND4kW26HMGDe4HFxZp/hN2xzutFyB3IKHHp9z8cQntsO2xhLQHbQPfFBlveqTFSrEYBasrrIn6aqNXxBdYDcSGaRYLvUSIIvaoN7zW/WLWZNG82J/bK6iyWmvRW2f2k6u1CFouIgISCgG2bXGq4=,iv:w0fdRX4DS711FyfsxQIOUsz7xEE7OkKv6A+7HrXxIeM=,tag:+XE6G2t+SQwIuu10knbO/A==,type:str]
+    lastmodified: "2023-07-08T12:20:39Z"
+    mac: ENC[AES256_GCM,data:seKGx2P/RTKHuL/QA8nqFS8KkwViC9BIf15SHqi/F6XbaIiHj2BLupp01zP1BEau/oTQOVkpV3JNln1QI/U16vlEhnE6e1WcS4TwdBy062pR+TGldEfI9s6sz/7P5ODFf6YzBZ6ZoWzB7S74mkTkanqsYfbGE5jEleej7zmGd3Y=,iv:8xm4YWEpb+VhHltQouOCf8LTdwENIUyj2uyiHq2iK9g=,tag:/js1KkkfSBZxjNHEaIdZzg==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.7.3
