--- a/ansible/install_applications_new/roles/logging-elasticsearch/vars/main.yml
+++ b/ansible/install_applications_new/roles/logging-elasticsearch/vars/main.yml
@@ -1,7 +1,7 @@
 ---
 elasticsearch_admin_user:
   user: "{{ elasticsearch_admin_user_user | default('admin') }}"
-  password: "{{ elasticsearch_admin_user_password | default(['password']) }}"
+  password: "{{ elasticsearch_admin_user_password | default('password') }}"
   # Use the node certificate as an admin user
   cn: "{{ elasticsearch_admin_user_cn }}"
 
