--- a/apps/vagrant/logging-elasticsearch/deploy/secret/elasticsearch/security/internal_users.yml
+++ b/apps/vagrant/logging-elasticsearch/deploy/secret/elasticsearch/security/internal_users.yml
@@ -1,39 +1,40 @@
-#ENC[AES256_GCM,data:fVpUmHZOwvecHjF4gcAOqpK+J2H3T/mtCn+1WVlPSkikWNg=,iv:6ArpXIgT23E9whd7OQEMwV6o/nwUw1pwqv8LQZfp0mY=,tag:FQQIPV+4bAHzhDhXzh+QgA==,type:comment]
-#ENC[AES256_GCM,data:ND2qRykdoWYsmQPyiH/+/pXBi9GkoKaCqBDgPsbST4EOosf6sf26avp7KXHl3qfaSZAlRgwyL3JDCZYr29eVbk4wFkYdgHcKVeSda8GnwQ==,iv:/CGvRsLh/PZ3108IDqx3uoBDA8Lh4yGws9ySWRtaClw=,tag:Gk3b430msCNUtmantPAjvQ==,type:comment]
+#ENC[AES256_GCM,data:/NlUVOapY6r9PTJRS6j0xMwyN2tePuS7W9LcmccEa4TOkEs=,iv:fY0oWjV9sRogeMO05sBLFvhrtbTq/VIlWsG+pbig7TM=,tag:MHiKGo1ur94r6JaROfJqVA==,type:comment]
+#ENC[AES256_GCM,data:rN4cDEqUsiHpa3g/qfPy/nKWnShWv+iPFpE1CzzlfUrV8Efs0SnlpOAcj9yK4pNk4pHVHvtaD2IHP0DLAQA1dFQbzjd7o8S3CP1midD51Q==,iv:OivpuFvlaN3u+nMjDhwn19YBMCeDM3nNrPyZmtWq62w=,tag:ehf7KfIUyQ1/LdlaIMDrqw==,type:comment]
 _meta:
     type: internalusers
-    config_version: ENC[AES256_GCM,data:TA==,iv:8HwiN/Lb6xq6ATfDeY1vqWosH2+Ip4vb2GIL4mJ5Q7E=,tag:D2XAIRnJdPOEEkfyW79S3A==,type:int]
-#ENC[AES256_GCM,data:PKCUd3LgjQZZxddYEyQCv10VqttSKreolTpBkg8SjpA=,iv:kN6F3SPHJ7MA+F5AltJ4sjaRbyqAMk5aArJW9/df7IU=,tag:k+mdUJLj3/7U4BUu6BO3KA==,type:comment]
+    config_version: ENC[AES256_GCM,data:1g==,iv:wtgECc+KhUA4Tj9KlSBwxkpTROFpQz9SMYtk1FmR6aI=,tag:+5NgOamGI09j5VLfd9TIlQ==,type:int]
+#ENC[AES256_GCM,data:CzWGTjdi6vPq8e82OqWodfTl0ZSmPdly8rc2l8YUtD8=,iv:3qj//nFQMkTOQQm2zha7nnbBd6DeL/9GrKnV4ZU97Fc=,tag:qsV1gXajH7Inp46pM2dRfw==,type:comment]
+#ENC[AES256_GCM,data:mlnGv2KVzIMO0lkX7wHYH2x53H3BXbHonlHOzEKPqTkBCO89Rf/BoeFcJR/Z8Pxc1gLt4kyrmCP1LSowLGk+kLbzlxJw2IFTHT9fZkPCzu4WH/UoC4eExZi9kEhfnGIsONGs6jlvMoYNTW3Mj3vBwLUQeuDlEQtK92qgTcqYTw==,iv:wB4XupStC1nZJlEoLYfstsWe5axLy92c+aWHKqv3sZs=,tag:IRRkC3vv9tnNeu2oIVGnFA==,type:comment]
 admin:
-    reserved: ENC[AES256_GCM,data:PfEsnA==,iv:uWMUqZUDjqzZNzy8GI2ElRoEcHpbMEmoSH82lmQDE1U=,tag:4y66iFd/bGZoaCXns2x8hw==,type:bool]
-    hash: ENC[AES256_GCM,data:3vEW2Gsm+THM/sYfIQEX2h8QSsGL6zTNW62IejZvr7D0r+AyIL1kokcZbgV6jtD1NELQ0py/4AlgdIHv,iv:gVN3rAL9UB5DAL5Kr2mru7RnGdLg/yXWT6vaeBe67mI=,tag:152e22MuMy03k6SlihkwmQ==,type:str]
+    reserved: ENC[AES256_GCM,data:JRTANg==,iv:ybguYDtaziBQ5FvVO2SPJCfwqhifDECOo5UFVLmgMIM=,tag:pgWN4kVs8iMsjhXKPoqIPQ==,type:bool]
+    hash: ENC[AES256_GCM,data:6EWcJnce1JZG1XFoCmGx+rNMi7kDliyOSdJlOWxndABYLP8GHqquUzlLHB9V+BTo34v29WdL6l3aHBjb,iv:NxmX7Jc08XpJ4ABfRNS7i+r7gU+JUIVN5/eDOcco0Bo=,tag:U3DflQpAKbmLR6+LJbdOHA==,type:str]
     backend_roles:
-        - ENC[AES256_GCM,data:P/9d068=,iv:pyXKnbnFlZMphN1EEOuaeczXUAIC4MdIBfkc3CYzjtM=,tag:RfyooVVTz2bxGICV2ak0lQ==,type:str]
+        - ENC[AES256_GCM,data:oO3zEzM=,iv:N77KBluHIT22kBA3SPzULkJ+D6u27qTTE6GykrTn2Vs=,tag:vmULV5DYD6UPmOvx36qMHw==,type:str]
 exporter:
-    reserved: ENC[AES256_GCM,data:ZQxT6Q==,iv:2BemGE0228xSb9w28fBFTv7CXrT7SpVX3XoAynCgI24=,tag:mjUrwbCR2Z4k7z1ELpdfbg==,type:bool]
-    hash: ENC[AES256_GCM,data:vpmOlZUjoiz9o5WYZvgjeL2jefiVjepa9bTT3f9lHpIp7JrMef0SMDvCHeLH4otdT9Ota0QucJqJdIp8,iv:aNMAJtPAvPi1/yAVbkGQT6Z2XRfLnZjXgv/P1hMEwgg=,tag:wd2k7MNFbl0RRgHZV2s99w==,type:str]
+    reserved: ENC[AES256_GCM,data:X8JJbg==,iv:CHEFbFbXrWcVeAgm8LMTchzUYcu7Fy6YFg+qJDMG7TQ=,tag:F2g2yhCdYQgp+72iN1+vQg==,type:bool]
+    hash: ENC[AES256_GCM,data:FpIuJ5X/r6471QDVmT+muo+Imu8eKV6Tjdirv+mzbRnJ6KPYKamHcqCH8xjD8j0WRNhDXqAluAFUJRFz,iv:QxzzmVlC1vHd88usovD+VG1RfulLbNSD6w2MghbmPLU=,tag:w2kGE6ZShmODNUe2bQy9rw==,type:str]
     backend_roles:
-        - ENC[AES256_GCM,data:273N0Jp5n4u6t/DFiPVidszrxQ==,iv:2ef6MBNlO+tUvCyok9HbuX6IdA6o9aYzSvyQDLYWblY=,tag:ebQmlm8p3v5U9olGNmD3hQ==,type:str]
+        - ENC[AES256_GCM,data:QoJ9c4c07cYTwODFTYFNXSexuA==,iv:lltT4IVw4Y2kC8TlQeR2aWs0kuvHKwOYCbk6s9AK9mw=,tag:Wrn+ZqtwJhZhTPIKwryQsQ==,type:str]
 fluent:
-    reserved: ENC[AES256_GCM,data:9+Av9Q==,iv:ZEszgRdt79yinkWJinvHPw9rmcTEu8/Xk3nzd8A1dZY=,tag:uZzkzSeFSWzxIQGzC79P/w==,type:bool]
-    hash: ENC[AES256_GCM,data:HXV5ShUmWNejUdM84vbuTZSaua6Lr8BRPiSpCv/o9TO1oCfmzFZ4dPaudV+ThfScVWjHyM5MnkvEpFSs,iv:aMYcWUcHZ8CxL+lDSF1u8d1YFuvmlR+8M78FlDz30GU=,tag:M5DAhFsZJBXneTg19OVquA==,type:str]
+    reserved: ENC[AES256_GCM,data:HlsUpw==,iv:CYYWtJ8v2bDK3uBcpyi4WYkmosUlTyAl0IahZd4ojyo=,tag:lnrAvOn2KCRgdhvtxha6hQ==,type:bool]
+    hash: ENC[AES256_GCM,data:7Fza88I6uVKEqmQxIQ1KxSNSdBJlIb69QTpTrbnthpS5wlaU0xFAUKnOSKwsw34iTy1m5WVNLc+PV6uh,iv:12XJvCM0uoGfJ6zYJesD6yVq6ZmBJHiVrtQGh7AJRrc=,tag:yWOGdi/Bm5ych7H//4rgVA==,type:str]
     backend_roles:
-        - ENC[AES256_GCM,data:J6HotU1E/TM=,iv:IfABpfPZoSje5cu0iIMXI2yCFhvpia2YS6b2Ruihf+k=,tag:ObAfQTeTx6iWG14nk0WAww==,type:str]
+        - ENC[AES256_GCM,data:QeLJDip1bgc=,iv:x15Lu21+NkXiz/tD7YqmG4BYZfYD/8TGPwKWqoNTctU=,tag:pYJmDPIcr3BtRR/RYGAsgw==,type:str]
 kibana:
-    reserved: ENC[AES256_GCM,data:Zj2d7Q==,iv:aDKs9OXHZncUJ4nd9Fww2qqnsfFeaUMGb6xWWt1aeU0=,tag:e6y0o9fXwfS8oJw1mOZLnw==,type:bool]
-    hash: ENC[AES256_GCM,data:I733ZFyyDuF80pOURTTmeS9haQZN8ZZCDYlDDNWnpPuzEegd7hrFhClXD/kB549wMLO2HC9hkWpQIHPY,iv:SQZHFm3YB8JeuOf2waFojUYxtSRNyPlXkv2l1pa2l/A=,tag:bm+fzm7jgV1Xae9PyyFiGA==,type:str]
+    reserved: ENC[AES256_GCM,data:R7m9tQ==,iv:XbJBGRKK1ZB+b09jHVvXao4CAJ1yPrEXSP6Us3hKJB4=,tag:Ob94YCFl8XALsO0lHmnUdg==,type:bool]
+    hash: ENC[AES256_GCM,data:HXhg80vyEsY6+Etuf6kOmiCZqnw/1NPn8l5EFs+L2JWpwcUDa/9LI0uEoTxGQ2+ngb42k2v7w855GRhJ,iv:dfKMzhXaDcz1iK3b8TCqKWK+pe951Sw4mF9K5ZwFZR4=,tag:0wyriyuIUtJxYEQGqyu1HQ==,type:str]
     backend_roles:
-        - ENC[AES256_GCM,data:i88Qfs7jO6HLySg6eA==,iv:NwyxMM8rIFDHvkNvCWSLPmUlEy7YWlxsW6q++iKlRhs=,tag:QPZS4vyOQPbMbAGFc45GEw==,type:str]
+        - ENC[AES256_GCM,data:kh1ebv+31VtOVIpQSg==,iv:0bgVEAYUCqiHjFL3ASPN1a1n7EsCQY3KGmyiUK1gxpM=,tag:cYd0ioDEkHjZia2oTJgpMQ==,type:str]
 crowdsec:
-    reserved: ENC[AES256_GCM,data:g7HqhQ==,iv:e2cdbYkIOBImVOSsriL68ThLMJ4QZbHhc2PUou33sS4=,tag:nH4BK4Dt8Ca3HYwRMlhYLQ==,type:bool]
-    hash: ENC[AES256_GCM,data:yQtHYuEfbv8j+jwegY11Ytpvdba4RsoPN0h4yUsedV9ZS2BSqf6YqjQQCornTUCHQVNm9/o5c2otb7gX,iv:IwvhrwFMrFZjeVOoJUWRwUAO0izpZPelr/qV4DJBNQM=,tag:LgF+eMjdBgEG9Kml9BFc+A==,type:str]
+    reserved: ENC[AES256_GCM,data:UYmC7Q==,iv:J9hVr9tyJRyBrZcL/9BI+Hj+/6vBkePZUz0HexF1duo=,tag:55YHawvnjFxdz2WbH2uWRQ==,type:bool]
+    hash: ENC[AES256_GCM,data:LcdxLf/7FmP2k1E7Hz38RhR/8HBHo5KtDRbjICcVxVIDp1nULQGEkUHcvo0fNmN5OA9K96juR01Nfbcg,iv:KDKqv5UL4xpb1bGMIuQ+xAGquZnhcFkqyzKLPZYtFoo=,tag:TpWV9Yi3a9b6VnTZiQf0KA==,type:str]
     backend_roles:
-        - ENC[AES256_GCM,data:1osj2/4XrAk=,iv:xBu6fpQXCjDKlPt/mW2ELan1dhAEqU+U/6kE77/EgJA=,tag:CT8i5TomSpdzG2RkBZVocQ==,type:str]
+        - ENC[AES256_GCM,data:Peuznunoq3U=,iv:KO9HM+piy60zVPCxQ4zmmk7m2p8DEjYAWqAJLL6WdP8=,tag:lY/7k7FlTykr9YJhKfOyaw==,type:str]
 grafana:
-    reserved: ENC[AES256_GCM,data:phYLAw==,iv:4g7+vRbN5DhQ8uO117CM95UY3SYEjiabCwAIpQEAXx4=,tag:hTEGTd0yBzC2LRJ29JvsTA==,type:bool]
-    hash: ENC[AES256_GCM,data:g3t28U94U4DayqUTf808buRiqXb4pdkMC21UeEuVhTA22sam1Ysh7JErlU8PZoHDpVqZm0vnFvLIhrkR,iv:c6hS77dcfsGY2BGj9PSJuiKCDrNZ6mrZ9dln1Ot2V/c=,tag:WxLrbH5Zd/QkIfA7XtDubg==,type:str]
+    reserved: ENC[AES256_GCM,data:41+K6Q==,iv:zle/H0P2ewAWltElhr/sSnmpAhzQ9gyVmTT3RgQxeoM=,tag:KK1hVWJvFypZidVZPv/i0Q==,type:bool]
+    hash: ENC[AES256_GCM,data:KU1l/oC3KWau7YeuEPbaiIROB4ioszSpSRPots3qsr12cVJxhLeXqsmp9+0kw6eTCXE6Tl0SQjKk5vCA,iv:OAKo2lj12WooTFYq0A6A6wCz4bDO8v3DlVCxIXOuRFc=,tag:nml5gfMP5+SYoV5x+4Qrvw==,type:str]
     backend_roles:
-        - ENC[AES256_GCM,data:qvOJAyrf3w==,iv:qtdqAQhAKB3lBa4CKw6GL5xAjzA41PM6g9dAQPqGxFE=,tag:ADhX8ICcTrGL1tyJoUntsg==,type:str]
+        - ENC[AES256_GCM,data:AZnuDms1tQ==,iv:x+uVHy5aB1u8esgVgenrD3bMx8MBdqQCo4aYQnaAXWc=,tag:MwBh/rHJnPrjopVnjBSRGA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -43,14 +44,14 @@ sops:
         - recipient: age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjWjN0SWh5NFhDRzFsU1Yr
-            blNwdW1FZWpUQjlzdkU3RUhxNEVDc3p6ZGdFClhMbmJzRWlpWldlOXk5ZEJteE1v
-            ZWNsM1Fuckk0RmhPcmJhRFc3T2NRVEUKLS0tIHJjMFo1SldKZFFEVVpsNk9RRU5M
-            cFR6U2tqZDY2ejBZdDhFek5rM2NVSTQK6jWkw9Rel4ZsPZZY9sU6sIVKZugM+i4o
-            7fgE2Fq4MV9M7321fk+ACrt8kmacfRllm8AYol4/6qkA3jwoTNh5Tg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNbkNLRU5GVWhQajJRaHhi
+            bXpRZFJ1MkpHQS8yNXd3a1JFR2JwTjBPNWlnClVSeWxhL2tuNGQ0eW96T3QwL0wr
+            VXpqdnZPZGt6eDBhaDhHbGVhS1pvMTAKLS0tIEdhL2VIRExJdjdSZ2NJN3hlUU54
+            a3MzLy83eGVYV1lrSnhDOFR2cUowVEkK72iaH2BaBOXMLLk2YuBzRHUb+gaOFJ3l
+            +46YNkYK59rgPIQq+SSHQL6VXZncAoGZRrN+XT67G/zHx7aBb++nfg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-08T08:04:58Z"
-    mac: ENC[AES256_GCM,data:xD7bKlr7MbOtNgr1Wl3wJGw9DKphqOauErImgZaH+GNErkbeaFPgYzT3K89pLAy8yrN+UGJhzc5uNtF3/9woS07t8ae93Oi5zrVb0M5oSXTErhlT3VuN9g0YEPs23yFTFqzRL+gIvFsiNdDfD7eNkfHiPaUYeLWN1GtpnYO2+co=,iv:p5l12WfCRL47SlUeRhsYp3RJhaz74G0c5ZU5bhNokSE=,tag:zj6ykDGsxR+rvgF8ic6OAQ==,type:str]
+    lastmodified: "2023-07-08T12:20:39Z"
+    mac: ENC[AES256_GCM,data:Nhe5mYAmRzCUNtg7j5dF7pSwtEoJlE1vfdVn1FwZc6AHFe74drvi3Jg4eQTnqa/NTL3EvNWl66lASJYh3/7Pw7lWoG9CN0YircEg9LYJA1Lpu0IPv4LNGUdyMUzPbkGfs25iDpYFtDuKvh6US6jD8LxBIZupuhB603XyUzojupU=,iv:GZvPrk043TrGQX133ViN+omPL+det8gRBPx+HyepvY4=,tag:Z9jtAfv7CMRnQZhdHxdp7w==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.7.3
