--- a/apps/vagrant/logging-elasticsearch/deploy/secret/elasticsearch/security/tenants.yml
+++ b/apps/vagrant/logging-elasticsearch/deploy/secret/elasticsearch/security/tenants.yml
@@ -1,11 +1,11 @@
 _meta:
     type: tenants
-    config_version: ENC[AES256_GCM,data:cA==,iv:Wo7aSGMi1/3Nny8k3CKPeCiqjwYFMepXk72lgTDyKaY=,tag:JHfpzDdyOP1t7l22dslVaw==,type:int]
-#ENC[AES256_GCM,data:u1x+UUSqTFTvHlimbVrpmtESTvmt0yzDXw==,iv:1aBEC5vmxbaxL+bwPxSVqfe2aDMeOitoYNy+agfE1Io=,tag:XR8bylt/PELI0dWeKsfTlg==,type:comment]
-#ENC[AES256_GCM,data:ZE5eqz3HmTfWG2NPmRA=,iv:NexLVMLZ5nBEXGPzcLBB5o1MbTuyoMxK8pSUaULLHk4=,tag:7RdsROeoB4vQ0Ha+Jj5qPw==,type:comment]
-#ENC[AES256_GCM,data:hNwhvMfPI3b/6FoEag==,iv:O157h3u3tqnJ8zIp7EeyOAVJChXwJZDfqtNpfxOqlMY=,tag:KEzrq32p9q5KpHxk6H17HA==,type:comment]
-#ENC[AES256_GCM,data:9ALnC5HQ/kSTt7l2d4WBGgs=,iv:Em0RJQmMBbb4GxZIVsAaLMdbS0OP96xWmZ/4tDu25ds=,tag:QUHeMgzez+cajjYwaixHYg==,type:comment]
-#ENC[AES256_GCM,data:TCdoFpMbhM3ydb4hGIm9yblFrLqAYvZzhSirf8UgTM7Q8NGcsfWNAHYWeQ==,iv:wv6YToyhVQswu+rgtVWZ5ZA0xVg1gjr2EJxyr9SE+D0=,tag:QrcEQvL3SSXcI/TsKecqRw==,type:comment]
+    config_version: ENC[AES256_GCM,data:ZQ==,iv:3IDBOKH+Vxd8akpHWMDhQJ1V3CDWq43HtNJBrg8+jfY=,tag:KKltbpuImao5Guf35wtcgg==,type:int]
+#ENC[AES256_GCM,data:TcAwYofNYo3bqjTFIv9lC0RuQVh0Q2Utww==,iv:ZEboiMDBZFLADudp3edGN+xgCWyQMsBiR7sD037tKnM=,tag:ts+gsnN+fRxZ7RzW9L1RPA==,type:comment]
+#ENC[AES256_GCM,data:4BZIkm5czUjVntg1nGI=,iv:f7SwjNp3dTN2p/a/qhTHrly4T1iUXfuz/az8KFONZFY=,tag:k6CLrY0RNnOG6lAOqHZ84g==,type:comment]
+#ENC[AES256_GCM,data:4cKWSQWWY3+mDC9aRw==,iv:PvEl4ecAh8pQQbfbMYRg6F2oLZBZ/bl+gGn6IVHZQhQ=,tag:s4TnzyzP84+WmntIJ4fz7g==,type:comment]
+#ENC[AES256_GCM,data:wKqlmHWO4YMA3ASH0pcjJaE=,iv:SxaKMMOZ6J7rf3fdpvxA7TXduXT8hzkEcdok6af/+VM=,tag:FyoRKaj/RRObdGXoHhbdAQ==,type:comment]
+#ENC[AES256_GCM,data:a4Msq/Q/qj5L9NYIQCAOKUf75ZUD107jkN9hKT+EsN4knwJZcFXX+FFjeA==,iv:7VCuTic7GHtorsbjMs2wLe2GkfeG7yNK+fDRadbUmVM=,tag:jpi3AayRv67mzw6D1k/orw==,type:comment]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYaHpDQXBaNSt0Y1ZhNEY4
-            bEl3Nk5mR2tUZG1IUmxCVm1WaU1DTzkyTkNRClk5QUhRa2ducjZGNksyWVFSdHR6
-            SXJIOS9KaWczR1NnR0tCRXFwUzAvcXMKLS0tIExvOXlPNnZBRm9VTDRHcGc0SVY2
-            QzQ1eHRWelhybFhUdEFvZERGVHMwREUK3SsvJRCdgXH/94AIDxT4c1VRAz11Z+UT
-            Im5IxGqGdI4QPQV+PxeG4iQLSdvhM3ggk2XoEXQ+TOYVSGKdgETgWg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0SzZtczRmVURBM0EvcDFk
+            MmZ1b29lWkFabUVXdU1jNEVNNXptUXpESndZCkVPbm9teFFmL0h3QUFPRnN0aTQx
+            VnVMWi9vSEUzZ0JhZHcvVmNINlhQaTAKLS0tIElGNGRNbjlYU3FVV1VvU2ZVNnlK
+            aW9PTlpxTjVRdmVpeFZWMWFIYVR5c2sKFHDMJVnxphubtRemfHJ25O+ysxZ0L6fD
+            ufoMhpcZjnPTH6FOCkl9wJA+ZVVtmDLE+q3mtKCVbaTTDBYIZrGgng==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-08T08:04:58Z"
-    mac: ENC[AES256_GCM,data:VRC5kRDXDhsYI9M9R2eFvCGb6GkOk6jNrdrld0ElYBQeFBiE5kyyNG7/17w89IHalRpZfky0sLpX/wcZpGx2cVnEE2Pu1hdMksoZqqC/P6lEDCE/GJ2J0e/jl1KzhJoMOPuN7wH2pRFoduPu+EboSXhxrOKTuW+atQvDpVFoXg4=,iv:1qFQyDhCn6kJp0+5Mwdwup+U8mrZtZJiwycYS4sBvzc=,tag:l/NBj+M6DDaX4OmSBk/BQw==,type:str]
+    lastmodified: "2023-07-08T12:20:39Z"
+    mac: ENC[AES256_GCM,data:vbgjTB5vLUXeRKNn8/aJGS9/fttioyBDkt3gHTrD12VPx2t/pBE/8zXF8KO2+dzWLJ49ObgKTOv+7YLEJiWe3hEKhrO48EH+olC5XfmIhTJDKZ5DH4MuS2Ma3eTtlSSzzZ5uRh2DN693FbhLBF8OhlMHXkuA9M1T67Wi/kpUvy8=,iv:W8+Cd21dDmLDJ3T47IXPIVrx6DH0Y1BpKOyR8LE4+ho=,tag:r1qIn1IWlduv+gUaxpvVsw==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.7.3
